# mcintel

./: .env.example  .gitignore  PLAN.md  README.md  pyproject.toml
src/mcintel/: __init__.py  config.py  logging.py
src/mcintel/cli/: commands.py
src/mcintel/db/: models.py  session.py
src/mcintel/dns/: resolver.py
src/mcintel/players/: mojang.py
src/mcintel/scanner/: bedrock.py  slp.py
tests/: test_dns.py  test_players.py  test_slp.py
