[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcintel"
version = "0.1.0"
description = "Minecraft Open-Source Intelligence Toolkit"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "dmaax" },
]
keywords = ["minecraft", "osint", "security", "intelligence", "scanner"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: Security",
    "Topic :: System :: Networking :: Monitoring",
]

dependencies = [
    # HTTP clients
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",

    # DNS resolution
    "dnspython>=2.6.0",

    # Database (async SQLAlchemy + drivers)
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.29.0",

    # Migrations
    "alembic>=1.13.0",

    # Config & validation
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",

    # CLI
    "typer>=0.12.0",
    "rich>=13.7.0",

    # API server
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",

    # Image processing (favicons)
    "Pillow>=10.3.0",
    "imagehash>=4.3.1",

    # Async utilities
    "anyio>=4.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",          # for TestClient
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-Pillow>=10.2.0",
]

[project.scripts]
mcintel = "mcintel.cli.commands:app"

[project.urls]
Homepage = "https://mcin.tel"
Repository = "https://github.com/dmaax/mcintel"
Issues = "https://github.com/dmaax/mcintel/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mcintel"]

[tool.hatch.envs.default]
python = "3.12"

# ─── Ruff (linter + formatter) ───────────────────────────────────────────────
[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ANN", # flake8-annotations (type hints)
    "S",   # flake8-bandit (security)
    "PT",  # flake8-pytest-style
]
ignore = [
    "ANN101", # missing type annotation for self
    "ANN102", # missing type annotation for cls
    "S101",   # use of assert (ok in tests)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "S"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ─── Mypy ────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

# ─── Pytest ──────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

# ─── Coverage ────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["src/mcintel"]
omit = ["tests/*", "src/mcintel/cli/*"]

[tool.coverage.report]
show_missing = true
